2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘targetdelta’ from global state of ci(1).

	* ci.c (targetdelta): Delete var.
	(struct bud): Add member ‘target’.
	(addbranch, addelta, getlogmsg): Use ‘bud->target’.
	(main): Use ‘bud.target’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘keepflag’ from global state of ci(1).

	* ci.c (keepflag): Delete var.
	(struct bud): Add member ‘keep’.
	(getlogmsg): Use ‘bud->keep’.
	(main): Use ‘bud.keep’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘exfile’ from global state of ci(1).

	* ci.c (exfile): Delete var.
	(struct work): Add member ‘ex’.
	(cleanup): Use ‘work->ex’.
	(xpandfile): Don't take UNEXFILE; instead, take WORK.
	(main): Init ‘work.ex’ to NULL;
	update call to ‘xpandfile’; use ‘work.ex’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use program-specific variable name for extracted help.

	* ci.c (main): Update ‘program’ initialization form.
	* co.c (main): Likewise.
	* ident.c (main): Likewise.
	* merge.c (main): Likewise.
	* rcs.c (main): Likewise.
	* rcsclean.c (main): Likewise.
	* rcsdiff.c (main): Likewise.
	* rcsmerge.c (main): Likewise.
	* rlog.c (main): Likewise.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘default_state’ from global state of ci(1).

	* ci.c (default_state): Delete var.
	(main): Add auto var ‘default_state’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove new{delnum,delta,branch} from global state of ci(1).

	* ci.c (newdelnum, newdelta): Delete vars.
	(struct bud): New.
	(newbranch): Delete var.
	(addbranch): Don't take NUM; take BUD,
	instead; compute ‘num’ internally.
	(addelta): Move 2nd arg to 3rd position;
	take 2nd arg BUD; update calls to ‘addbranch’.
	(getlogmsg): Take 2nd arg BUD.
	(main): Add auto var ‘bud’; update calls to ‘addelta’, ‘getlogmsg’.

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘rcsinitflag’ from global state of ci(1).
